# memchat

./: .gitignore  README.md  pyproject.toml
src/memchat/: character_system.py  config.py  main.py
